plang/testing/logs/false-incorrect/34/program34.p.p
kg0 (hiR2t) DB4 (Ee0) :- (z8fx; saJ5 dcbs), lpOrz oXqP xFY dpZh E.

y6kf UnJDA DXqRz (ql (r B) VNf55) (OOMt2) :- kNjBh eg2sb y h4e.

lIoVw grknZ (OzLu) TXhjz :- pq, ((z (QQ9X) vD J (PKg)), p m5sQE; drBQ, aG9ME (V) (ChfWW) c0; nbk8, dZRE (T4OS) l, qWC7c (ea3U) (declT (UgX) Is h8Uq) (choBk vvVwm ZC)).

n (SF8S1) :- ((((rm)))).

dtL (Tt).


eeCT l8RL LsNqE (uy5M (W) (bGDk L0P1j nc (Hp4JQ) (x FgDNQ)) (dTTqb O) (A7)) (BJ5p) :- ((nR9r (g (A) (qjjR (L) SopuF) (R)) (Vd) W2, e (Qtf) (SpoQ) (n Oh30p (oQ6 LXMfP (Yy) (ZKsDf)) guSP (b TWine (Ny) (Bvlcb) (vLUG (O) (TbTS5) (s) EMgJM))))), daKs xIy75 Et (gHoK).

ni7NP Dva.


p :- (z bq5gw), (u5f (IRX) (p (CTn))); (rN fJG (k5aa (XkoiP) (TPQiA) Dem) (ivAV3 R6NMs (oMt g (t2n (t (wA5R (s6) l7 (KB) (jrmUo)) (mp8O (Za4) raq9G P1 (tkA (gC (KExr) (VCn3)) (C3S2i) Xx (r xbnut (Y5Q) OL Gd))) CRGn) o sQ))) NzzI), oaNB9 (jBgm Hf4 (ymmQt) rvN YalR) (LJs) (Ygaxh) xk7; bD (BT6) w (pdM0 (o WZv rI6L (N8Jh))), vumBn XjZ y7O, g qz5h (Rt9vO) g, w7X rMK GvZ (noy XkgX).

iZ (K3) (j rAZ (rGsU M (Sa) (kYJj (E) jMq Om) pMvHp)) (w0D Q) :- ((eBiNm y7 kTw8; w pPNk ZdY7; qG9 LG; uX655 M); f (Vre1) JveKR).


sxhQP (cW (aPUV oYgoS) (Y)) :- qf ao boYcn.

fP5G DJEn (Fsm) (z).


cgdoR (E4Sz) (JKP) (Bu) (f9) :- zZ (F43V7) bYByi, xa eExOi Q9qI WqwS; onCg u4Q; p6X th (bF3 (n0a (pJkQ) iJa FsllJ) xLhJN); s W0 bVm G eEGM; f (rwDD) iNzxY yXwO P; (lE (iX5Rl (iPwA (pml8 vBZ (Ohaxv)))) gcBd (wj YkWH) (sMV)), gSXg (S00W); zj (fffP (Z) (Ql) (O)) (TwCE) (M9F) (lU), kZOI vZP (f) (j4 qjD Nvc (WcAd) (PFv)); w5Yu (U) nrR iqQ (FzF5g), (kV5 eXOMZ); t, ((rflaQ FB (v) BVmix)), kQpok; yqf2a C; u (N) (h Bx IFE6) (E4i) DD6; h lu7xV.

? (h TIdD, qQLjT JhcK, dKJG Z42ae (Mf); fBweh nWpA (rg (R) (cj jNJ)) (AY) (ZrMyo), (amrky (EvndQ) (A), zBm5F (P) mwfa)).
